Initiating Process DAL

--- a/EyeHistoria/appsettings.json
+++ b/EyeHistoria/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "EyeHistoriaConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EyeHistoria;Integrated Security=True;"
+    "EyeHistoriaConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EyeHistoria;Integrated Security=True;",
+    "ProcessConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EyeHistoria;Integrated Security=True;"
   }
 }
