Changed Initial Catalog

--- a/EyeHistoria/appsettings.json
+++ b/EyeHistoria/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "EyeHistoriaConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EyeHistoria;Integrated Security=True;",
-    "ProcessConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EyeHistoria;Integrated Security=True;"
+    "ProcessConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Process;Integrated Security=True;"
   }
 }
